...
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oJE-Kb-x03">
                                <rect key="frame" x="0.0" y="0.0" width="320" height="768"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jy3-pf-6dx">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="768"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Host" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iPx-Wi-rjB" customClass="UITextFieldCustomEdges">
                                                <rect key="frame" x="20" y="111" width="280" height="40"/>
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="pne-AD-npc"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Awm-LN-3PR" customClass="UITextFieldCustomEdges">
                                                <rect key="frame" x="20" y="159" width="280" height="40"/>
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="zLm-ZA-sra"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hHA-bg-usf" customClass="UITextFieldCustomEdges">
                                                <rect key="frame" x="20" y="207" width="280" height="40"/>
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="J7W-oX-j0u"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
...
                                                <color key="backgroundColor" red="0.50588235290000005" green="0.7725490196" blue="0.29411764709999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="45" id="PCf-wr-oMk"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Sign In">
                                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="auth:" destination="9Y5-rP-iYw" eventType="touchUpInside" id="Qvn-sU-KzZ"/>
                                                </connections>
                                            </button>
...
                        <rect key="frame" x="0.0" y="0.0" width="320" height="768"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="2er-pK-cwz">
                                <rect key="frame" x="0.0" y="64" width="320" height="29"/>
                                <segments>
                                    <segment title="Personal"/>
                                    <segment title="Corporate"/>
                                    <segment title="Downloads"/>
                                </segments>
                            </segmentedControl>
                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sTW-Wm-0qj" userLabel="Person">
                                <rect key="frame" x="0.0" y="94" width="320" height="674"/>
                                <connections>
...
                                    <barButtonItem title="Upload" id="F3k-2G-kRH">
                                        <connections>
                                            <action selector="uploadAction:" destination="OpD-O3-IBM" id="B7s-FP-Wcx"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Gpl-UK-Svt"/>
                                    <barButtonItem image="more" width="47" id="DXV-Ld-rkg">
                                        <connections>
                                            <action selector="editAction:" destination="OpD-O3-IBM" id="rMc-V2-NHA"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                            </toolbar>
...
